feat(web): allow closing direct messages
